# PersonalizedImageGeneration

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  multi-composer.code-workspace  mypy.ini  pyproject.toml  requirements.txt
configs/: batch_infer_config.yaml  config.yaml  eval_config.yaml  infer_config.yaml  train_config.yaml
dataset/: Makefile  create_dataset_with_inpainting.py  pyproject.toml
dataset/configs/: inpainting.yaml
docker/: build.sh  run.sh
fastcomposer/: batch_infer.py  batch_inference.py  check_facenet.py  data.py  detect_facial_landmark.py  evaluate_clip_score.py  evaluate_replication.py  evaluate_replication_feature.py  evaluate_replication_landmark.py  evaluate_replication_templete.py  evaluate_replication_vlm.py  evaluate_similarity.py  infer.py  inference.py  inference_with_argparse.py  inference_with_hydra.py  model.py  pipeline.py  train.py  train_fc.py  train_with_face_loss.py  transforms.py  utils.py
jobs/: run.sh  run_batch_infer.sh  run_infer.sh
script/: train.sh  train_fastcomposer.sh
scripts/: docker_build.sh  docker_run.sh  download_model.sh  run_inference.sh
utils/: check_result.ipynb  download.py  download_sd.py  merge_example_image.py  show_evaluate_result.py  show_inference_images.py  test_vlm.py
